--- a/TitlesOrganizer.Web/Views/Books/UpsertBook.cshtml
+++ b/TitlesOrganizer.Web/Views/Books/UpsertBook.cshtml
@@ -135,6 +135,6 @@
 </div>
 
 @section Scripts {
-    <script type="text/javascript" src="~/js/Books/UpsertBook.js"></script>
+    <script type="text/javascript" src="~/js/Books/UpsertBookScript.js"></script>
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
 }
