Update Books views Change alerts to toasts

--- a/TitlesOrganizer.Web/Views/Books/Authors.cshtml
+++ b/TitlesOrganizer.Web/Views/Books/Authors.cshtml
@@ -142,7 +142,7 @@
                     $("#partialModal").modal('show');
                 })
                 .fail(function (response) {
-                    alert(response.responseText);
+                    fhToastr.error(response.responseText);
                 });
         }
     </script>
