--- a/TitlesOrganizer.Web/Views/Books/BookDetails.cshtml
+++ b/TitlesOrganizer.Web/Views/Books/BookDetails.cshtml
@@ -107,7 +107,7 @@
     </a>
 </p>
 
-@section Scripts {
+@section Scripts
+{
     <script type="text/javascript" src="~/js/Books/BookDetailsScript.js"></script>
-
 }
