--- a/TitlesOrganizer.Web/Views/Books/Series.cshtml
+++ b/TitlesOrganizer.Web/Views/Books/Series.cshtml
@@ -143,7 +143,7 @@
                     $("#partialModal").modal('show');
                 })
                 .fail(function (response) {
-                    alert(response.responseText);
+                    fhToastr.error(response.responseText);
                 });
         }
     </script>
