--- a/TitlesOrganizer.Web/Views/Books/_GenresPartial.cshtml
+++ b/TitlesOrganizer.Web/Views/Books/_GenresPartial.cshtml
@@ -4,7 +4,7 @@
         <div class="card-header d-flex w-100 justify-content-between mb-1 bg-body-tertiary border-0 align-items-center">
             <h5>Genres</h5>
             <span>
-                <select class="form-select" name="genresPageSize" id="genresPageSize" asp-for="Paging.PageSize" onchange="javascript:ReloadGenres();">
+                <select class="form-select" name="genresPageSize" id="genresPageSize" asp-for="Paging.PageSize" onchange="javascript:Reload('Genre');">
                     <option value="1">1 genre on page</option>
                     <option value="3">3 genres on page</option>
                     <option value="5">5 genres on page</option>
@@ -21,7 +21,7 @@
             {
                 @foreach (var genre in Model.Values)
                 {
-                    <a type="button" asp-action="GenreDetails" asp-route-id="@genre.Id" class="btn btn-primary m-1">
+                    <a type="button" asp-action="GenreDetails" asp-route-id="@genre.Id" class="btn btn-primary m-1" title="Show details">
                         @genre.Description
                     </a>
                 }
@@ -41,40 +41,44 @@
                     @if (Model.Paging.CurrentPage > numbersNextTo + 1)
                     {
                         <li class="page-item">
-                            <a class="page-link" href="javascript:GenresPagerClick(@(Model.Paging.CurrentPage - numbersNextTo - 1))" aria-label="Previous">
+                            <a class="page-link" href="javascript:PagerClick('Genre', @(Model.Paging.CurrentPage - numbersNextTo - 1))" aria-label="Previous">
                                 <span aria-hidden="true">&laquo;</span>
                             </a>
                         </li>
                     }
+
                     @for (int i = numbersNextTo; i >= 1; i--)
                     {
                         if (i < Model.Paging.CurrentPage)
                         {
                             <li class="page-item">
-                                <a class="page-link" href="javascript:GenresPagerClick(@(Model.Paging.CurrentPage - i))">
+                                <a class="page-link" href="javascript:PagerClick('Genre', @(Model.Paging.CurrentPage - i))">
                                     @(Model.Paging.CurrentPage - i)
                                 </a>
                             </li>
                         }
                     }
+
                     @if (pages > 1)
                     {
                         <li class="page-item active" aria-current="page">
                             <span class="page-link">@Model.Paging.CurrentPage</span>
                         </li>
                     }
+
                     @for (int i = 1; i <= numbersNextTo && Model.Paging.CurrentPage + i <= pages; i++)
                     {
                         <li class="page-item">
-                            <a class="page-link" href="javascript:GenresPagerClick(@(Model.Paging.CurrentPage + i))">
+                            <a class="page-link" href="javascript:PagerClick('Genre', @(Model.Paging.CurrentPage + i))">
                                 @(Model.Paging.CurrentPage + i)
                             </a>
                         </li>
                     }
+
                     @if (Model.Paging.CurrentPage + numbersNextTo + 1 <= pages)
                     {
                         <li class="page-item">
-                            <a class="page-link" href="javascript:GenresPagerClick(@(Model.Paging.CurrentPage + numbersNextTo + 1))" aria-label="Next">
+                            <a class="page-link" href="javascript:PagerClick('Genre', @(Model.Paging.CurrentPage + numbersNextTo + 1))" aria-label="Next">
                                 <span aria-hidden="true">&raquo;</span>
                             </a>
                         </li>
