--- a/TitlesOrganizer.Web/Views/Books/BookDetails.cshtml
+++ b/TitlesOrganizer.Web/Views/Books/BookDetails.cshtml
@@ -11,7 +11,7 @@
         <div class="pt-0 text-right align-top">
             @if (!string.IsNullOrEmpty(Model.InSeries))
             {
-                <span>@Model.InSeries <a asp-action="SeriesDetails" asp-route-id="@Model.Series?.Id">@Model.Series?.Description</a> series</span>
+                <span>@Model.InSeries <a asp-action="SeriesDetails" asp-route-id="@Model.Series?.Id" title="Show details">@Model.Series?.Description</a> series</span>
             }
         </div>
     </div>
@@ -19,7 +19,7 @@
         <nav class="nav">
             @foreach (var author in Model.Authors)
             {
-                <h3 class="px-0"><a asp-action="AuthorDetails" asp-route-id="@author.Id" class="nav-link px-2">@author.Description</a></h3>
+                <h3 class="px-0"><a asp-action="AuthorDetails" asp-route-id="@author.Id" class="nav-link px-2" title="Show details">@author.Description</a></h3>
             }
         </nav>
     </div>
@@ -82,7 +82,7 @@
     <div class="p-4">
         @foreach (var genre in Model.Genres)
         {
-            <a type="button" asp-action="GenreDetails" asp-route-id="@genre.Id" class="btn btn-outline-primary m-1">@genre.Description</a>
+            <a type="button" asp-action="GenreDetails" asp-route-id="@genre.Id" class="btn btn-outline-primary m-1" title="Show details">@genre.Description</a>
         }
     </div>
 </div>
@@ -93,7 +93,7 @@
         </svg>
         Edit
     </a>
-    <a class="icon-link" onclick="javascript:Delete(@Model.Id);" href="#">
+    <a class="icon-link" onclick="javascript:Delete(@Model.Id, 'Book');" href="#">
         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-trash3" viewBox="0 0 16 16">
             <path d="M6.5 1h3a.5.5 0 0 1 .5.5v1H6v-1a.5.5 0 0 1 .5-.5M11 2.5v-1A1.5 1.5 0 0 0 9.5 0h-3A1.5 1.5 0 0 0 5 1.5v1H2.506a.58.58 0 0 0-.01 0H1.5a.5.5 0 0 0 0 1h.538l.853 10.66A2 2 0 0 0 4.885 16h6.23a2 2 0 0 0 1.994-1.84l.853-10.66h.538a.5.5 0 0 0 0-1h-.995a.59.59 0 0 0-.01 0zm1.958 1-.846 10.58a1 1 0 0 1-.997.92h-6.23a1 1 0 0 1-.997-.92L3.042 3.5zm-7.487 1a.5.5 0 0 1 .528.47l.5 8.5a.5.5 0 0 1-.998.06L5 5.03a.5.5 0 0 1 .47-.53Zm5.058 0a.5.5 0 0 1 .47.53l-.5 8.5a.5.5 0 1 1-.998-.06l.5-8.5a.5.5 0 0 1 .528-.47ZM8 4.5a.5.5 0 0 1 .5.5v8.5a.5.5 0 0 1-1 0V5a.5.5 0 0 1 .5-.5" />
         </svg>
@@ -109,5 +109,5 @@
 
 @section Scripts
 {
-    <script type="text/javascript" src="~/js/Books/BookDetailsScript.js"></script>
+    <script type="text/javascript" src="~/js/Books/Delete.js"></script>
 }
