--- a/TitlesOrganizer.Web/Views/Books/Series.cshtml
+++ b/TitlesOrganizer.Web/Views/Books/Series.cshtml
@@ -51,7 +51,7 @@
         {
             @foreach (var series in Model.Values)
             {
-                <button type="button" class="details list-group-item list-group-item-action list-group-item-primary" onclick="javascript:ShowDetails(@series.Id);" title="Show details">
+                <button type="button" class="details list-group-item list-group-item-action list-group-item-primary" onclick="javascript:ShowDetails(@series.Id, 'Series');" title="Show details">
                     @Html.DisplayFor(modelItem => series.Description)
                 </button>
             }
@@ -60,6 +60,7 @@
         {
             <span><i>No book series found</i></span>
         }
+
     </div>
     <div class="row justify-content-center">
         @{
@@ -76,6 +77,7 @@
                         </a>
                     </li>
                 }
+
                 @for (int i = numbersNextTo; i >= 1; i--)
                 {
                     if (i < Model.Paging.CurrentPage)
@@ -83,16 +85,19 @@
                         <li class="page-item"><a class="page-link" href="javascript:PagerClick(@(Model.Paging.CurrentPage - i))">@(Model.Paging.CurrentPage - i)</a></li>
                     }
                 }
+
                 @if (pages > 1)
                 {
                     <li class="page-item active" aria-current="page">
                         <span class="page-link">@Model.Paging.CurrentPage</span>
                     </li>
                 }
+
                 @for (int i = 1; i <= numbersNextTo && Model.Paging.CurrentPage + i <= pages; i++)
                 {
                     <li class="page-item"><a class="page-link" href="javascript:PagerClick(@(Model.Paging.CurrentPage + i))">@(Model.Paging.CurrentPage + i)</a></li>
                 }
+
                 @if (Model.Paging.CurrentPage + numbersNextTo + 1 <= pages)
                 {
                     <li class="page-item">
@@ -101,6 +106,7 @@
                         </a>
                     </li>
                 }
+
             </ul>
         </nav>
         <input type="hidden" name="pageNo" id="pageNo" />
@@ -122,30 +128,8 @@
     </div>
 </div>
 @section Scripts {
-    <script type="text/javascript">
-        function PagerClick(index) {
-            document.getElementById("pageNo").value = index;
-            Submit();
-        }
-
-        function Submit() {
-            document.forms[0].submit();
-        }
-
-        function ShowDetails(id) {
-            var token = $('input[name="__RequestVerificationToken"]').val();
-            $.post("/Books/SeriesDetailsPartial", {
-                "id": id,
-                "__RequestVerificationToken": token
-            })
-                .done(function (response) {
-                    $("#partialModal").find(".modal-body").html(response);
-                    $("#partialModal").modal('show');
-                })
-                .fail(function (response) {
-                    fhToastr.error(response.responseText);
-                });
-        }
-    </script>
-    <script type="text/javascript" src="~/js/Books/SeriesDetailsScript.js"></script>
+    <script type="text/javascript" src="~/js/Books/ListView.js"></script>
+    <script type="text/javascript" src="~/js/Books/Delete.js"></script>
+    <script type="text/javascript" src="~/js/Books/PartialList.js"></script>
+    <script type="text/javascript" src="~/js/Books/PartialForSeries.js"></script>
 }
