--- a/TitlesOrganizer.Web/Views/Books/_SelectAuthorsForBook.cshtml
+++ b/TitlesOrganizer.Web/Views/Books/_SelectAuthorsForBook.cshtml
@@ -1,5 +1,6 @@
 ﻿@model TitlesOrganizer.Application.ViewModels.BookVMs.ListAuthorForBookVM
-<form enctype="multipart/form-data" method="post" id="selectAuthors" asp-action="FinalizeSelectAuthorsForBook" onsubmit="SelectAuthorsSubmit(event);" >
+
+<form enctype="multipart/form-data" method="post" id="selectAuthors" asp-action="FinalizeSelectAuthorsForBook" onsubmit="SubmitSelect(event, 'Author');" >
     <input type="hidden" asp-for="Item.Id" name="bookId" id="bookId" />
     <input type="hidden" asp-for="Item.Description" />
     <div class="card w-100">
